[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pg-jdbc-lib"
version = "0.1.0"
description = "PostgreSQL JDBC helper library for Dataiku plugins"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "jaydebeapi>=1.2.3",
  "JPype1>=1.4.1"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]