[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pg_jdbc_lib"
version = "0.1.3"
description = "PostgreSQL JDBC client library (jaydebeapi 기반)"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "ssg" }]
dependencies = ["jaydebeapi"]

[tool.setuptools.packages.find]
where = ["src"]